--- a/index.html
+++ b/index.html
@@ -1,18 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <title>Basic sass template</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="Basic Sass Boilerplate" />
-	  <link href="assets/css/app.css" rel="stylesheet" />
-</head>
-<body>
 
-<div id="example">
-  <h1>Hello world!</h1>
-</div>
+<head>
+  <title>Basic sass template</title>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="title" content="Basic Sass Boilerplate" />
+  <link href="assets/css/app.css" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Teko:300,400" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" rel="stylesheet">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
+    crossorigin="anonymous">
+  <script type="text/javascript" src="./assets/js/jquery.min.js"></script>
+  <script type="text/javascript" src="./assets/js/script.js"></script>
+</head>
+
+<body>
+  <nav>
+    <div class="container">
+      <ul>
+        <li><a href="#" class="about">About</a></li>
+        <li><a href="#" class="portfolio-link">Portfolio</a></li>
+        <li><a href="#" class="contact-link">Contact</a></li>
+      </ul>
+    </div>
+  </nav>
+  <div class="banner">
+    <div class="container">
+      <img src="./assets/images/mockup.png" />
+      <span>Alexa Moreno - Web layout's portfolio.</span>
+    </div>
+  </div>
+  <div class="portfolio">
+    <h2>Portfolio</h2>
+    <div class="container">
+      <div class="col">
+        <img src="./assets/images/gammaautomation.png" />
+        <a href="http://gammaautomation.com/" target=”_blank”>Gamma Automation</a>
+      </div>
+      <div class="col">
+        <img src="./assets/images/dentvelop.png" />
+        <a href="http://aldea.space/beta/dentvelop/" target=”_blank”>Dentvelop</a>
+      </div>
+      <div class="col">
+        <img src="./assets/images/toolcraft.png" />
+        <a href="http://aldea.space/beta/grupotoolcraft/" target=”_blank”>Grupo Toolcraft</a>
+      </div>
+      <div class="col">
+        <img src="./assets/images/luztopia.png" />
+        <a href="http://luztopia.mx/" target=”_blank”>Luztopía</a>
+      </div>
+    </div>
+  </div>
+  <div class="contact">
+    <h2>Contact info</h2>
+    <div class="divider"></div>
+    <div class="container">
+      <div class="col">
+        <i class="far fa-envelope fa-lg"></i>
+        <span>alexa.morenohdz@outlook.com</span>
+      </div>
+      <div class="col">
+        <h3>External links</h3>
+        <div>
+          <i class="fab fa-linkedin fa-lg"></i><a href="https://www.linkedin.com/in/alexa-moreno-b78410b0/" target=”_blank”>LinkedIn</a>
+        </div>
+        <div>
+          <i class="fab fa-behance-square fa-lg"></i><a href="https://www.behance.net/alexamoren0a9a" target=”_blank”>Behance</a>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- <div id="example">
+    <h1>Te quiero uwu</h1>
+    <h6>Te amo</h6>
+  </div> -->
 
 </body>
+
 </html>
