--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>Basic sass template</title>
+  <title>Alexa Moreno</title>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -30,11 +30,11 @@
   <div class="banner">
     <div class="container">
       <img src="./assets/images/mockup.png" />
-      <span>Alexa Moreno - Web layout's portfolio.</span>
+      <span>Alexa Moreno</span>
     </div>
   </div>
   <div class="portfolio">
-    <h2>Portfolio</h2>
+    <h2>Work</h2>
     <div class="container">
       <div class="col">
         <img src="./assets/images/gammaautomation.png" />
@@ -55,7 +55,7 @@
     </div>
   </div>
   <div class="contact">
-    <h2>Contact info</h2>
+    <h2>Alexa Moreno</h2>
     <div class="divider"></div>
     <div class="container">
       <div class="col">
