--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="title" content="Basic Sass Boilerplate" />
   <link href="assets/css/app.css" rel="stylesheet" />
   <link href="https://fonts.googleapis.com/css?family=Teko:300,400" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Encode+Sans+Condensed:400,500" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,600" rel="stylesheet">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU"
     crossorigin="anonymous">
@@ -21,63 +21,105 @@
   <nav>
     <div class="container">
       <ul>
-        <li><a href="#" class="about">About</a></li>
+        <li><a href="#" class="about-link">About</a></li>
         <li><a href="#" class="portfolio-link">Portfolio</a></li>
         <li><a href="#" class="contact-link">Contact</a></li>
       </ul>
     </div>
   </nav>
-  <div class="banner">
+  <div class="about">
     <div class="container">
-      <img src="./assets/images/mockup.png" />
-      <span>Alexa Moreno</span>
-    </div>
-  </div>
-  <div class="portfolio">
-    <h2>Work</h2>
-    <div class="container">
-      <div class="col">
-        <img src="./assets/images/gammaautomation.png" />
-        <a href="http://gammaautomation.com/" target=”_blank”>Gamma Automation</a>
+      <h1>Alexa Moreno.</h1>
+      <div>
+        <h3>About me</h3>
+        <div class="divider"></div>
+        <p>Web Developer with market experience, knowledgeable in the full stack required for web development. Skilled in
+          animation and 2D art with a strong focus in concept art; creative professional with a bachelor's of Digital Animation
+          and Media focused in Digital Arts from Universidad Autónoma de Nuevo León.</p>
       </div>
-      <div class="col">
-        <img src="./assets/images/dentvelop.png" />
-        <a href="http://aldea.space/beta/dentvelop/" target=”_blank”>Dentvelop</a>
+      <div>
+        <h3>Experience</h3>
+        <div class="divider"></div>
+        <h4>Aldea - Web Application Developer: (June 2017 - Current)</h4>
+        <p>Aldea. is a marketing agency and design firm helping companies develop their digital marketing strategy through
+          the use use of social media, attractive branding focused on their clients, and trendy web pages.<br><br> My responsibilities
+          entail:
+        </p>
+        <ul>
+          <li>Development of web based application based on requirements specified by clients</li>
+          <li>Documentation of procedures for end user</li>
+          <li>Development and design of internal tools</li>
+          <li>Implement application designs based on specification</li>
+        </ul>
       </div>
-      <div class="col">
-        <img src="./assets/images/toolcraft.png" />
-        <a href="http://aldea.space/beta/grupotoolcraft/" target=”_blank”>Grupo Toolcraft</a>
-      </div>
-      <div class="col">
-        <img src="./assets/images/luztopia.png" />
-        <a href="http://luztopia.mx/" target=”_blank”>Luztopía</a>
-      </div>
-    </div>
-  </div>
-  <div class="contact">
-    <h2>Alexa Moreno</h2>
-    <div class="divider"></div>
-    <div class="container">
-      <div class="col">
-        <i class="far fa-envelope fa-lg"></i>
-        <span>alexa.morenohdz@outlook.com</span>
-      </div>
-      <div class="col">
-        <h3>External links</h3>
-        <div>
-          <i class="fab fa-linkedin fa-lg"></i><a href="https://www.linkedin.com/in/alexa-moreno-b78410b0/" target=”_blank”>LinkedIn</a>
+      <div>
+        <h3>Skills</h3>
+        <div class="divider"></div>
+        <div class="row">
+          <div class="col">
+            <h4>Languages</h4>
+            <ul>
+              <li>HTML5</li>
+              <li>CSS3</li>
+              <li>Javascript</li>
+              <li>PHP</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h4>Libraries/Frameworks</h4>
+            <ul>
+              <li>Sass</li>
+              <li>Materialize CSS</li>
+              <li>Bootstrap</li>
+              <li>Wordpress</li>
+              <li>jQuery</li>
+              <li>ReactJS*</li>
+              <li>AngularJS*</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h4>Tools</h4>
+            <ul>
+              <li>Photoshop</li>
+              <li>Git</li>
+              <li>Illustrator*</li>
+              <li>Adobe XD*</li>
+            </ul>
+          </div>
+          <div class="col">
+            <h4>Other</h4>
+            <ul>
+              <li>Responsive Design</li>
+              <li>Flexbox</li>
+              <li>CSS Grid</li>
+              <li>Semantic HTML</li>
+            </ul>
+          </div>
         </div>
-        <div>
-          <i class="fab fa-behance-square fa-lg"></i><a href="https://www.behance.net/alexamoren0a9a" target=”_blank”>Behance</a>
-        </div>
+      </div>
+      <div>
+        <h3>Education</h3>
+        <div class="divider"></div>
+        <p>August 2013 - November 2017</p>
+        <h4>Bachelor's degree Digital Animation and Media, Digital Arts</h4>
+        <p>Universidad Autónoma de Nuevo León</p>
       </div>
     </div>
   </div>
-  <!-- <div id="example">
-    <h1>Te quiero uwu</h1>
-    <h6>Te amo</h6>
-  </div> -->
-
+  <div class="contact-me">
+    <div class="container">
+      <a href="#" class="alt-title">Contact me <i class="fas fa-arrow-right"></i></a>
+    </div>
+  </div>
+  <footer>
+    <div class="container">
+      <ul>
+        <li>Social:</li>
+        <li><a href="https://www.linkedin.com/in/alexa-moreno-b78410b0/">LinkedIn</a></li>
+        <li><a href="https://www.behance.net/alexamoren0a9a">Behance</a></li>
+      </ul>
+    </div>
+  </footer>
 </body>
 
 </html>
