--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <nav>
     <div class="container">
       <ul>
-        <li><a href="#" class="about-link">About</a></li>
-        <li><a href="#" class="portfolio-link">Portfolio</a></li>
+        <li><a href="./index.html" class="about-link">About</a></li>
+        <li><a href="./works.html" class="works-link">Works</a></li>
         <li><a href="#" class="contact-link">Contact</a></li>
       </ul>
     </div>
