--- a/works.html
+++ b/works.html
@@ -23,7 +23,7 @@
             <ul>
                 <li><a href="./index.html" class="about-link">About</a></li>
                 <li><a href="./works.html" class="works-link">Works</a></li>
-                <li><a href="#" class="contact-link">Contact</a></li>
+                <li><a href="./contact.html" class="contact-link">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -56,8 +56,8 @@
         <div class="container">
             <ul>
                 <li>Social:</li>
-                <li><a href="https://www.linkedin.com/in/alexa-moreno-b78410b0/">LinkedIn</a></li>
-                <li><a href="https://www.behance.net/alexamoren0a9a">Behance</a></li>
+                <li><a href="https://www.linkedin.com/in/alexa-moreno-b78410b0/" class="animate">LinkedIn</a></li>
+                <li><a href="https://www.behance.net/alexamoren0a9a" class="animate">Behance</a></li>
             </ul>
         </div>
     </footer>
