--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
     </nav>
     <div class="contact">
         <div class="container">
-            <h2>You can contact via the following:</h2>
+            <h2>You can contact me via the following:</h2>
             <div class="divider"></div>
             <div class="row">
                 <div class="col">
