--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="container">
       <ul>
         <li><a href="./index.html" class="about-link">About</a></li>
-        <li><a href="./works.html" class="works-link">Works</a></li>
+        <li><a href="./work.html" class="works-link">Work</a></li>
         <li><a href="./contact.html" class="contact-link">Contact</a></li>
       </ul>
     </div>
@@ -33,9 +33,9 @@
       <div>
         <h3>About me</h3>
         <div class="divider"></div>
-        <p>Web Developer with market experience, knowledgeable in the full stack required for web development. Skilled in
-          animation and 2D art with a strong focus in concept art; creative professional with a bachelor's of Digital Animation
-          and Media focused in Digital Arts from Universidad Autónoma de Nuevo León.</p>
+        <p>I'm a Web Developer with full stack knowledge. Skilled in animation and 2D art with a strong focus in concept
+          art; I'm a creative professional with a bachelor's of Digital Animation and Media focused in Digital Arts from
+          Universidad Autónoma de Nuevo León.</p>
       </div>
       <div>
         <h3>Experience</h3>
