--- a/work.html
+++ b/work.html
@@ -27,26 +27,28 @@
             </ul>
         </div>
     </nav>
-    <div class="contact">
+    <div class="works">
         <div class="container">
-            <h2>We can get in touch via:</h2>
+            <p>Some projects I've worked on:</p>
             <div class="divider"></div>
             <div class="row">
-                <div class="col">
-                    <i class="fas fa-envelope fa-lg"></i> <span>alexa.morenohdz@outlook.com</span>
+                <div class="col-title">
+                    <a href="https://aldea.space/beta/dentvelop" target="_blank" class="title animate ti-1 hide-med show-lg">Dentvelop</a>
+                    <a href="https://gammaautomation.com" target="_blank" class="title animate ti-2 hide-med show-lg">Gamma
+                        Automation</a>
+                    <a href="https://luztopia.mx" target="_blank" class="title animate ti-3 hide-med show-lg">Luztopia 2018</a>
+                    <a href="https://aldea.space/beta/grupotoolcraft" target="_blank" class="title animate ti-4 hide-med show-lg">Toolcraft</a>
+
+                    <h3 class="title animate ti-1b show-med hide-lg">Dentvelop</h3>
+                    <h3 class="title animate ti-2b show-med hide-lg">Gamma Automation</h3>
+                    <h3 class="title animate ti-3b show-med hide-lg">Luztopia 2018</h3>
+                    <h3 class="title animate ti-4b show-med hide-lg">Toolcraft</h3>
                 </div>
                 <div class="col">
-                    <i class="fas fa-phone fa-lg"></i><span>+52 811-3863970</span>
-                </div>
-            </div>
-            <h2>Social:</h2>
-            <div class="divider"></div>
-            <div class="row">
-                <div class="col">
-                    <i class="fab fa-linkedin fa-lg"></i> <a href="https://www.linkedin.com/in/alexa-moreno-b78410b0/" class="animate">LinkedIn</a>
-                </div>
-                <div class="col">
-                    <i class="fab fa-behance-square fa-lg"></i><a href="https://www.behance.net/alexamoren0a9a" class="animate">Behance</a>
+                    <a class=" img img-1" href="https://aldea.space/beta/dentvelop" target="_blank"><img src="./assets/images/dentvelop-m.png"></a>
+                    <a class=" img img-2" href="https://gammaautomation.com" target="_blank"><img src="./assets/images/gammaautomation-m.png"></a>
+                    <a class=" img img-3" href="https://luztopia.mx" target="_blank"><img src="./assets/images/luztopia-m.png"></a>
+                    <a class=" img img-4" href="https://aldea.space/beta/grupotoolcraft" target="_blank"><img src="./assets/images/toolcraft-m.png"></a>
                 </div>
             </div>
         </div>
