--- a/work.html
+++ b/work.html
@@ -33,9 +33,10 @@
             <div class="divider"></div>
             <div class="row">
                 <div class="col-title">
-                    <a href="https://aldea.space/beta/dentvelop" target="_blank" class="title animate ti-1 hide-med show-lg">Dentvelop</a>
+                    <a href="https://dentvelop.com" target="_blank" class="title animate ti-1 hide-med show-lg">Dentvelop</a>
                     <a href="https://gammaautomation.com" target="_blank" class="title animate ti-2 hide-med show-lg">Gamma
-                        Automation</a>
+                        Automation
+                    </a>
                     <a href="https://luztopia.mx" target="_blank" class="title animate ti-3 hide-med show-lg">Luztopia 2018</a>
                     <a href="https://aldea.space/beta/grupotoolcraft" target="_blank" class="title animate ti-4 hide-med show-lg">Toolcraft</a>
 
@@ -45,7 +46,7 @@
                     <h3 class="title animate ti-4b show-med hide-lg">Toolcraft</h3>
                 </div>
                 <div class="col">
-                    <a class=" img img-1" href="https://aldea.space/beta/dentvelop" target="_blank"><img src="./assets/images/dentvelop-m.png"></a>
+                    <a class=" img img-1" href="https://dentvelop.com" target="_blank"><img src="./assets/images/dentvelop-m.png"></a>
                     <a class=" img img-2" href="https://gammaautomation.com" target="_blank"><img src="./assets/images/gammaautomation-m.png"></a>
                     <a class=" img img-3" href="https://luztopia.mx" target="_blank"><img src="./assets/images/luztopia-m.png"></a>
                     <a class=" img img-4" href="https://aldea.space/beta/grupotoolcraft" target="_blank"><img src="./assets/images/toolcraft-m.png"></a>
